<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.CreateStudentActivity"
    tools:showIn="@layout/activity_create_student">

    <EditText
        android:id="@id/create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="text"/>

    <EditText
        android:id="@id/create_nik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nik"
        android:inputType="number"/>

    <EditText
        android:id="@id/create_majors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_majors"
        android:inputType="text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/create_course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/create_course_add_title"
            android:layout_toStartOf="@id/create_course_add_title"
            android:textStyle="bold"
            android:text="@string/title_course" />

        <TextView
            android:id="@id/create_course_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:text="@string/title_course_add" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@id/create_course_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@id/create_course_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>